chore: AI code quality improvements via Claude [skip ci] (#902)
Co-authored-by: github-actions[bot] <github-actions[bot]@users.noreply.github.com>
Co-authored-by: Benoit Chatain Lacelle <benoit@solven.eu>